--- a/package.json
+++ b/package.json
@@ -7,10 +7,88 @@
     "express": "^4.18.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node /src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "array-flatten": "^1.1.1",
+    "body-parser": "^1.20.1",
+    "balanced-match": "^1.0.2",
+    "ansi-styles": "^4.3.0",
+    "bytes": "^3.1.2",
+    "async": "^3.2.4",
+    "call-bind": "^1.0.2",
+    "concat-map": "^0.0.1",
+    "brace-expansion": "^1.1.11",
+    "chalk": "^4.1.2",
+    "cookie-signature": "^1.0.6",
+    "color-name": "^1.1.4",
+    "color-convert": "^2.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "depd": "^2.0.0",
+    "debug": "^2.6.9",
+    "escape-html": "^1.0.3",
+    "destroy": "^1.2.0",
+    "encodeurl": "^1.0.2",
+    "etag": "^1.8.1",
+    "ee-first": "^1.1.1",
+    "cookie": "^0.5.0",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "filelist": "^1.0.4",
+    "has": "^1.0.3",
+    "get-intrinsic": "^1.2.0",
+    "function-bind": "^1.1.1",
+    "inherits": "^2.0.4",
+    "http-errors": "^2.0.0",
+    "media-typer": "^0.3.0",
+    "has-symbols": "^1.0.3",
+    "iconv-lite": "^0.4.24",
+    "merge-descriptors": "^1.0.1",
+    "has-flag": "^4.0.0",
+    "ipaddr.js": "^1.9.1",
+    "mime-types": "^2.1.35",
+    "mime-db": "^1.52.0",
+    "mime": "^1.6.0",
+    "jake": "^10.8.5",
+    "minimatch": "^3.1.2",
+    "negotiator": "^0.6.3",
+    "object-inspect": "^1.12.3",
+    "on-finished": "^2.4.1",
+    "path-to-regexp": "^0.1.7",
+    "ms": "^2.0.0",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
+    "parseurl": "^1.3.3",
+    "raw-body": "^2.5.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "serve-static": "^1.15.0",
+    "send": "^0.18.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "statuses": "^2.0.1",
+    "toidentifier": "^1.0.1",
+    "methods": "^1.1.2",
+    "unpipe": "^1.0.0",
+    "type-is": "^1.6.18",
+    "vary": "^1.1.2",
+    "utils-merge": "^1.0.1",
+    "supports-color": "^7.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lucasthomas43/Mi-Portfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Lucasthomas43/Mi-Portfolio/issues"
+  },
+  "homepage": "https://github.com/Lucasthomas43/Mi-Portfolio#readme",
   "description": ""
 }
