--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "ansi-styles": "^4.3.0",
     "accepts": "^1.3.8",
+    "ansi-styles": "^4.3.0",
     "array-flatten": "^1.1.1",
     "async": "^3.2.4",
     "balanced-match": "^1.0.2",
@@ -13,20 +13,20 @@
     "brace-expansion": "^1.1.11",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.2",
-    "color-convert": "^2.0.1",
     "chalk": "^4.1.2",
+    "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
-    "cookie-signature": "^1.0.6",
     "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
     "debug": "^2.6.9",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "ee-first": "^1.1.1",
-    "encodeurl": "^1.0.2",
     "ejs": "^3.1.8",
+    "encodeurl": "^1.0.2",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
@@ -39,27 +39,27 @@
     "has": "^1.0.3",
     "has-flag": "^4.0.0",
     "has-symbols": "^1.0.3",
-    "iconv-lite": "^0.4.24",
     "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "jake": "^10.8.5",
+    "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
-    "media-typer": "^0.3.0",
-    "mime-db": "^1.52.0",
     "mime": "^1.6.0",
-    "minimatch": "^3.1.2",
+    "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "minimatch": "^3.1.2",
     "ms": "^2.0.0",
-    "on-finished": "^2.4.1",
-    "parseurl": "^1.3.3",
     "negotiator": "^0.6.3",
     "object-inspect": "^1.12.3",
+    "on-finished": "^2.4.1",
+    "parseurl": "^1.3.3",
     "path-to-regexp": "^0.1.7",
     "proxy-addr": "^2.0.7",
-    "range-parser": "^1.2.1",
     "qs": "^6.11.0",
+    "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
     "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
@@ -71,13 +71,15 @@
     "supports-color": "^7.2.0",
     "toidentifier": "^1.0.1",
     "type-is": "^1.6.18",
+    "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
-    "unpipe": "^1.0.0"
+    "vary": "^1.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "scripts": {
-    "start": " nodemon ./src/app.js"
+    "start": " node ./src/app.js"
   },
   "repository": {
     "type": "git",
